--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>សួស្តី 	&#9829;</h1>
     <br>
     <a href="https://www.facebook.com/profile.php?id=61560750087820&mibextid=ZbWKwL" class="fb"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://www.tiktok.com/@knvvg3?_t=ZS-8uNC7lavXoP&_r=1" class="tiktok"><i class="fab fa-tiktok"></i></a>
+    <a href="https://www.tiktok.com/@lsshopping086" class="tiktok"><i class="fab fa-tiktok"></i></a>
     <a href="https://www.instagram.com/sautsreyleak/" class="insta"><i class="fab fa-instagram"></i></a>
     <a href="https://t.me/Sautsreyleak" class="telegram"><i class="fab fa-telegram"></i></a>
   </div>
